[package]
name = "glutin2-sharing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glutin = { git = "https://github.com/kchibisov/glutin.git", branch = "glutin-v2" }
winit = "0.27.2"
raw-window-handle = "0.5.0"
glow = "0.11.2"